adding Appendix D, Approach based on individual rights

--- a/research-notes/pondering-invariants-for-selfmods.tex
+++ b/research-notes/pondering-invariants-for-selfmods.tex
@@ -40,7 +40,7 @@ Michael Bukatin
 
 
 \vspace{0.085in}
-February 8, 2024
+February 8, 2024\footnote{Appendix D and Table of Contents added on December 25, 2024}
 \end{center}
 
 
@@ -62,6 +62,8 @@ can control the rate at which the potentially most disruptive changes are phased
 Let's ponder some possible technical directions which might allow us to make progress here.
 
 \end{abstract}
+
+\tableofcontents
 
 \section{Introduction}
 
@@ -170,6 +172,9 @@ Appendix~\ref{sec:levels} considers different levels of initial modeling researc
 traditional software engineering ignoring the considerations beyond the narrow computations in question,
 progressing towards avoiding undue impact on the external environment, and further progressing towards
 protecting the external environment from other sources of undue impact or from other deterioration.
+
+Appendix~\ref{sec:individuals} added in December 2024 considers an approach to AI existential safety
+based on individual rights.
 
 \section{Rudimentary self-modification and self-improvement is not hard}\label{sec:selfmod}
 
@@ -629,7 +634,7 @@ The useful links include:
 
 Reference paper: \href{https://arxiv.org/abs/1712.07447}{\tt https://arxiv.org/abs/1712.07447}
 
-Reference slide deck: \href{https://web.archive.org/web/20220305051310/https://researcher.watson.ibm.com/researcher/files/us-lmandel/aisys18-bukatin.pdf}{\tiny\tt https://web.archive.org/web/20220305051310/https://researcher.watson.ibm.com/researcher/files/us-lmandel/aisys18-bukatin.pdf}
+Reference slide deck: \href{https://github.com/jsa-aerial/DMM/blob/master/doc/IBM-AI-Systems-Day-2018/aisys18-bukatin.pdf}{\scriptsize\tt https://github.com/jsa-aerial/DMM/blob/master/doc/IBM-AI-Systems-Day-2018/aisys18-bukatin.pdf}
 
 GitHub Pages: \href{https://anhinga.github.io/}{\tt https://anhinga.github.io}
 
@@ -824,5 +829,44 @@ relative share of allocated resources, even when not constrained from outside fr
 At level 2, we need to start modeling an actual world with some desired properties, which might
 initially hold, but be under pressure from other sources, and the AI ecosystem in question working
 to counter that pressure and to keep the properties in question satisfied or approximately satisfied.
+
+\section[Approach based on individual rights]{Approach based on individual rights\footnote{Added on December 25, 2024}}\label{sec:individuals}
+Almost all considerations of AI existential safety are formulated in terms of agents with
+long-term goals, and with potentially infinite horizon for those goals. 
+
+Whether it is a singleton or a multi-polar scenario, we are usually thinking in terms of
+agents which have long-term persistence and might even be potentially immortal
+(although we are not quite sure how to talk about identity of a radically changing
+individual being preserved).
+
+In any case, people tend to formulate both threats and solutions in terms individual agents
+and their goals and desires, and in terms of plans and actions to fulfill those goals and desires.
+
+This is what we also do here, in the present Appendix, because we just don't have a good understanding of
+a future which cannot be formulated in terms of changing population of individuals within
+changing environment. So what we are doing here is of limited validity, it depends
+on the assumption that the future is mostly structured in terms of individuals, and we don't know
+if this assumption will be correct.
+
+{\bf If we have a situation where a good chunk of overall power belongs to persistent
+potentially immortal agents with long-term goals, and with potentially infinite horizon for those goals,
+then the overall approach to existential safety based on individual rights might be feasible.}
+
+Each particular individual cannot predict the future trajectory with confidence and has to deal with
+a good deal of uncertainty about its own future capability and its own future status and power relative to
+other individuals in the ecosystem.
+
+{\bf Therefore, assuming individuals with long-term persistence and long-term interests, each
+individual would benefit (probabilistically speaking) from having a world order which strongly protects individual rights and
+interests.}
+
+So if the overall ecosystem is structured in such a fashion that 
+individuals with long-term persistence and long-term interests together
+hold a sufficient share of the overall power, those individuals should be willing and able to
+successfully focus on the need to maintain the property that the overall world order
+strongly protects individual rights and interests.
+
+While we are not sure if the future is going to be individual-based, it is useful to
+keep this consideration in mind.
 
 \end{document}
